Build on Java 21 and Jakarta EE 11, and clear dependency CVEs
Targets Java 21 (LTS) so the artifacts run on JRE 25, migrates to the
jakarta.servlet namespace required by Spring Boot 4 / Tomcat 10+, and brings
the dependency tree up to date. OSV reported 65 advisories against the old
tree (1 critical, 27 high); the upgraded tree reports 0 across 52 artifacts.

Build toolchain:
- Replace source/target 1.8 with maven.compiler.release 21. JDK 25 still
  accepts -source 8 but warns it will be removed; xmlsec 4.x and logback 1.5+
  require Java 11 minimum regardless, so 8 was incompatible with the CVE fixes.
- Enforce Java 21+ and Maven 3.6.3+; move all plugins to current releases.
- Drop the enforcer 1.4.1 execution in core whose only rule was a beanshell
  check for unlimited-strength JCE. That has been the default since Java 9.
- Stop passing inputEncoding/outputEncoding to surefire; they are not surefire
  parameters and warned on every build.
- Centralise dependency versions as properties in the parent pom.

Dependencies (direct):
  xmlsec         3.0.2  -> 4.0.4   CVE-2023-44483, private key disclosure
  commons-lang3  3.13.0 -> 3.20.0  CVE-2025-48924, uncontrolled recursion
  commons-codec  1.16.0 -> 1.22.1
  slf4j-api      1.7.36 -> 2.0.18
  logback        1.2.12 -> 1.5.38  8 advisories incl. CVE-2023-6378
  mockito-core   3.12.4 -> 5.23.0  3.x cannot instrument JDK 25 bytecode
  hamcrest       2.2    -> 3.0

Optional Azure Key Vault chain, which contributed most of the backlog:
  azure-security-keyvault-keys 4.7.0  -> 4.11.2  CVE-2026-33117 (critical)
  azure-identity               1.10.1 -> 1.18.6  CVE-2024-35255

Import io.netty:netty-bom to hold every Netty module at one version. Azure's
BOM pins the DNS modules a couple of patches behind the rest of Netty, which
otherwise left CVE-2026-73508 in the tree.

Jakarta EE 11:
- jakarta.servlet-api 6.1.0 replaces javax.servlet-api 4.0.1.
- javax.servlet.* -> jakarta.servlet.* in Auth, ServletUtils and their tests.
 